--- a/public/courses/stat220/week5/index.html
+++ b/public/courses/stat220/week5/index.html
@@ -836,6 +836,13 @@ Before Class  Please read GW Chapter 14 on strings and regular expressions. Cont
 <ul>
 <li>Link to <a href="https://github.com/stat220/10-more-strings" target="_blank" rel="noopener">In Class Activity</a></li>
 </ul>
+<p><span style="color:orange"><strong>Monday, 02/02</strong></span></p>
+<h3 id="before-class-1">Before Class</h3>
+<div class="alert alert-note">
+  <div>
+    Please gently read <a href="https://rafalab.github.io/dsbook/text-mining.html#text-mining">IDS Chapter 27</a> on text mining.
+  </div>
+</div>
 
           </div>
 
