--- a/public/courses/stat220/week5/index.html
+++ b/public/courses/stat220/week5/index.html
@@ -840,7 +840,7 @@ Before Class  Please read GW Chapter 14 on strings and regular expressions. Cont
 <h3 id="before-class-1">Before Class</h3>
 <div class="alert alert-note">
   <div>
-    Please gently read <a href="https://rafalab.github.io/dsbook/text-mining.html#text-mining">IDS Chapter 27</a> on text mining.
+    Please gently read <a href="https://rafalab.github.io/dsbook/text-mining.html#text-mining">IDS Chapter 27</a> on text mining. Also, read <a href="http://varianceexplained.org/r/trump-tweets/">this article</a> by David Robinson.
   </div>
 </div>
 
