--- a/public/courses/stat220/cheatsheets/index.html
+++ b/public/courses/stat220/cheatsheets/index.html
@@ -62,7 +62,9 @@
   
   <meta name="description" content="R markdown Cheatsheet
 ggplot2 Cheatsheet
-dplyr Cheatsheet" />
+dplyr Cheatsheet
+lubridate Cheatsheet
+stringr Cheatsheet" />
 
   
   <link rel="alternate" hreflang="en-us" href="https://deepbas.netlify.app/courses/stat220/cheatsheets/" />
@@ -305,7 +307,9 @@ dplyr Cheatsheet" />
   <meta property="og:title" content="Link to cheatsheets | Deepak Bastola" />
   <meta property="og:description" content="R markdown Cheatsheet
 ggplot2 Cheatsheet
-dplyr Cheatsheet" /><meta property="og:image" content="https://deepbas.netlify.app/media/icon_hua2ec155b4296a9c9791d015323e16eb5_11927_512x512_fill_lanczos_center_3.png" />
+dplyr Cheatsheet
+lubridate Cheatsheet
+stringr Cheatsheet" /><meta property="og:image" content="https://deepbas.netlify.app/media/icon_hua2ec155b4296a9c9791d015323e16eb5_11927_512x512_fill_lanczos_center_3.png" />
     <meta property="twitter:image" content="https://deepbas.netlify.app/media/icon_hua2ec155b4296a9c9791d015323e16eb5_11927_512x512_fill_lanczos_center_3.png" /><meta property="og:locale" content="en-us" />
   
     
@@ -826,6 +830,8 @@ dplyr Cheatsheet" /><meta property="og:image" content="https://deepbas.netlify.a
             <p><a href="/cheatsheets/rmarkdown-2.0.pdf" target="_blank">R markdown Cheatsheet</a></p>
 <p><a href="/cheatsheets/data-visualization.pdf" target="_blank"><code>ggplot2</code> Cheatsheet</a></p>
 <p><a href="/cheatsheets/data-transformation.pdf" target="_blank"><code>dplyr</code> Cheatsheet</a></p>
+<p><a href="/cheatsheets/lubridate.pdf" target="_blank"><code>lubridate</code> Cheatsheet</a></p>
+<p><a href="/cheatsheets/strings.pdf" target="_blank"><code>stringr</code> Cheatsheet</a></p>
 
           </div>
 
