--- a/public/courses/stat220/week5/index.html
+++ b/public/courses/stat220/week5/index.html
@@ -857,7 +857,7 @@ Before Class  Please read GW Chapter 14 on strings and regular expressions. Cont
 <h3 id="before-class-2">Before Class</h3>
 <div class="alert alert-note">
   <div>
-    Please read <a href="https://r4ds.had.co.nz/functions.html">GW Chapter 19</a> on writing functions in R. If you have no prior experience in functions the following video would give you a nice overview (using R).
+    Please read <a href="https://r4ds.had.co.nz/functions.html">GW Chapter 19</a> on writing functions in R. If you have no prior experience in writing functions, the following video would give you a nice overview (using R).
   </div>
 </div>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/p8tAQx7ijXE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
