--- a/public/courses/stat220/cheatsheets/index.html
+++ b/public/courses/stat220/cheatsheets/index.html
@@ -710,6 +710,10 @@ stringr Cheatsheet" /><meta property="og:image" content="https://deepbas.netlify
       
 
 
+  <li class=""><a href="/courses/stat220/week6/">Week 6</a></li>
+
+
+
   <li class=""><a href="/courses/stat220/week5/">Week 5</a></li>
 
 
