--- a/public/courses/stat220/week3/index.html
+++ b/public/courses/stat220/week3/index.html
@@ -704,6 +704,10 @@ Before Class  Please read GW Chapter 5, Irizarry Sections 4.1-4.11(optional), an
       
 
 
+  <li class=""><a href="/courses/stat220/week6/">Week 6</a></li>
+
+
+
   <li class=""><a href="/courses/stat220/week5/">Week 5</a></li>
 
 
