--- a/public/courses/stat220/week6/index.html
+++ b/public/courses/stat220/week6/index.html
@@ -840,7 +840,7 @@ Before Class  Please read GW 21.1-21.5 on iterations and functionals.   There wi
     Please read <a href="https://r4ds.had.co.nz/iteration.html">GW 21.1-21.5</a> on iterations and functionals.
   </div>
 </div>
-<p style="background-color: #FFFF00"> There will be an in-class Midterm II on Monday, 04/14 next week! </p>
+<p style="background-color: #404040"> There will be an in-class Midterm II on Monday, 04/14 next week! </p>
 
           </div>
 
