--- a/static/pdf/Day14/Day14.html
+++ b/static/pdf/Day14/Day14.html
@@ -289,7 +289,7 @@ system.time({
   }
 })
    user  system elapsed 
- 11.584   0.043  11.632 
+ 12.432   0.056  12.496 
 ```
 
 ]
@@ -304,7 +304,7 @@ system.time({
   }
 })
    user  system elapsed 
-  0.008   0.000   0.009 
+   0.01    0.00    0.01 
 ```
 ]
 
@@ -492,7 +492,7 @@ class: action
 # &lt;i class="fa fa-pencil-square-o" style="font-size:48px;color:purple"&gt;&amp;nbsp;Your&amp;nbsp;Turn&amp;nbsp;1&lt;/i&gt;    
 
 .font120[
-Load the `palmerpenguins` package. Write a `for` loop that calculates the mean of the numeric variables in the
+Please git clone the github repository on [simple iterations](https://github.com/stat220/13-simple-iterations). Write a `for` loop that calculates the mean of the numeric variables in the
 `penguins` data set and stores the means in a named vector.]
 
 
@@ -509,7 +509,7 @@ $ sex               &lt;fct&gt; male, female, female, NA, female, male, female, 
 $ year              &lt;int&gt; 2007, 2007, 2007, 2007, 2007, 2007, 2007, 2007, 2007…
 ```
 
-<div class="countdown" id="timer_6203f488" style="right:0;bottom:0;" data-warnwhen="0">
+<div class="countdown" id="timer_6203f8d6" style="right:0;bottom:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">04</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
@@ -1476,7 +1476,7 @@ Follow the prompts to plot the quantiles of energy consumption for the buildings
 ]
 
 
-<div class="countdown" id="timer_6203f59c" style="right:0;bottom:0;" data-warnwhen="0">
+<div class="countdown" id="timer_6203f5fa" style="right:0;bottom:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">05</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
