--- a/public/courses/stat220/week6/index.html
+++ b/public/courses/stat220/week6/index.html
@@ -849,6 +849,13 @@ Before Class  Please read GW 21.1-21.5 on iterations and functionals.   There wi
 <ul>
 <li>Link to <a href="https://github.com/stat220/13-simple-iterations" target="_blank" rel="noopener">In Class Activity</a></li>
 </ul>
+<p><span style="color:orange"><strong>Wednesday, 02/11</strong></span></p>
+<h3 id="before-class-1">Before Class</h3>
+<div class="alert alert-note">
+  <div>
+    Please read <a href="https://rafalab.github.io/dsbook/web-scraping.html">Irizarry Chapter 24</a> on web scraping.
+  </div>
+</div>
 
           </div>
 
