--- a/public/courses/stat220/week6/index.html
+++ b/public/courses/stat220/week6/index.html
@@ -60,9 +60,9 @@
   
     
   
-  <meta name="description" content="Monday, 02/07
+  <meta name="description" content="There will be an in-class Midterm II on Monday, 02/14 next week!  Monday, 02/07
  Midterm Break!   Wednesday, 02/09
-Before Class  Please read GW 21.1-21.5 on iterations and functionals.   There will be an in-class Midterm II on Monday, 02/14 next week!" />
+Before Class  Please read GW 21.1-21.5 on iterations and functionals." />
 
   
   <link rel="alternate" hreflang="en-us" href="https://deepbas.netlify.app/courses/stat220/week6/" />
@@ -303,9 +303,9 @@ Before Class  Please read GW 21.1-21.5 on iterations and functionals.   There wi
   <meta property="og:site_name" content="Deepak Bastola" />
   <meta property="og:url" content="https://deepbas.netlify.app/courses/stat220/week6/" />
   <meta property="og:title" content="Week 6 | Deepak Bastola" />
-  <meta property="og:description" content="Monday, 02/07
+  <meta property="og:description" content="There will be an in-class Midterm II on Monday, 02/14 next week!  Monday, 02/07
  Midterm Break!   Wednesday, 02/09
-Before Class  Please read GW 21.1-21.5 on iterations and functionals.   There will be an in-class Midterm II on Monday, 02/14 next week!" /><meta property="og:image" content="https://deepbas.netlify.app/media/icon_hua2ec155b4296a9c9791d015323e16eb5_11927_512x512_fill_lanczos_center_3.png" />
+Before Class  Please read GW 21.1-21.5 on iterations and functionals." /><meta property="og:image" content="https://deepbas.netlify.app/media/icon_hua2ec155b4296a9c9791d015323e16eb5_11927_512x512_fill_lanczos_center_3.png" />
     <meta property="twitter:image" content="https://deepbas.netlify.app/media/icon_hua2ec155b4296a9c9791d015323e16eb5_11927_512x512_fill_lanczos_center_3.png" /><meta property="og:locale" content="en-us" />
   
     
@@ -827,7 +827,8 @@ Before Class  Please read GW 21.1-21.5 on iterations and functionals.   There wi
           <h1>Week 6</h1>
 
           <div class="article-style">
-            <p><span style="color:orange"><strong>Monday, 02/07</strong></span></p>
+            <p style="background-color: #404040"> <span style="color:red">There will be an in-class Midterm II on Monday, 02/14 next week! </span>  </p>
+<p><span style="color:orange"><strong>Monday, 02/07</strong></span></p>
 <div class="alert alert-note">
   <div>
     Midterm Break!
@@ -840,7 +841,6 @@ Before Class  Please read GW 21.1-21.5 on iterations and functionals.   There wi
     Please read <a href="https://r4ds.had.co.nz/iteration.html">GW 21.1-21.5</a> on iterations and functionals.
   </div>
 </div>
-<p style="background-color: #404040"> <span style="color:red">There will be an in-class Midterm II on Monday, 02/14 next week! </span>  </p>
 <h3 id="in-class">In Class</h3>
 <ul>
 <li>Iterations and functionals</li>
@@ -849,13 +849,15 @@ Before Class  Please read GW 21.1-21.5 on iterations and functionals.   There wi
 <ul>
 <li>Link to <a href="https://github.com/stat220/13-simple-iterations" target="_blank" rel="noopener">In Class Activity</a></li>
 </ul>
-<p><span style="color:orange"><strong>Wednesday, 02/11</strong></span></p>
+<p><span style="color:orange"><strong>Friday, 02/11</strong></span></p>
 <h3 id="before-class-1">Before Class</h3>
 <div class="alert alert-note">
   <div>
     Please read <a href="https://rafalab.github.io/dsbook/web-scraping.html">Irizarry Chapter 24</a> on web scraping.
   </div>
 </div>
+<p>Also, it may be useful to go over this short video on the <a href="https://youtu.be/v8Yh_4oE-Fs" target="_blank" rel="noopener">simple demonstration of web scraping</a> before class. We will go over this in detail in class.</p>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/v8Yh_4oE-Fs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
           </div>
 
