--- a/public/courses/stat220/data/index.html
+++ b/public/courses/stat220/data/index.html
@@ -706,6 +706,10 @@ Tricky Data file" /><meta property="og:image" content="https://deepbas.netlify.a
       
 
 
+  <li class=""><a href="/courses/stat220/week7/">Week 7</a></li>
+
+
+
   <li class=""><a href="/courses/stat220/week6/">Week 6</a></li>
 
 
