--- a/public/courses/stat220/week7/index.html
+++ b/public/courses/stat220/week7/index.html
@@ -61,7 +61,8 @@
     
   
   <meta name="description" content="Monday, 02/14
- In-class Midterm II   " />
+ In-class Midterm II   Wednesday, 02/16
+Before Class  Please continue reading Irizarry Chapter 24 on web scraping. Go over the slides from last Friday and practice using CSS Selector Gadget." />
 
   
   <link rel="alternate" hreflang="en-us" href="https://deepbas.netlify.app/courses/stat220/week7/" />
@@ -303,7 +304,8 @@
   <meta property="og:url" content="https://deepbas.netlify.app/courses/stat220/week7/" />
   <meta property="og:title" content="Week 7 | Deepak Bastola" />
   <meta property="og:description" content="Monday, 02/14
- In-class Midterm II   " /><meta property="og:image" content="https://deepbas.netlify.app/media/icon_hua2ec155b4296a9c9791d015323e16eb5_11927_512x512_fill_lanczos_center_3.png" />
+ In-class Midterm II   Wednesday, 02/16
+Before Class  Please continue reading Irizarry Chapter 24 on web scraping. Go over the slides from last Friday and practice using CSS Selector Gadget." /><meta property="og:image" content="https://deepbas.netlify.app/media/icon_hua2ec155b4296a9c9791d015323e16eb5_11927_512x512_fill_lanczos_center_3.png" />
     <meta property="twitter:image" content="https://deepbas.netlify.app/media/icon_hua2ec155b4296a9c9791d015323e16eb5_11927_512x512_fill_lanczos_center_3.png" /><meta property="og:locale" content="en-us" />
   
     
@@ -833,6 +835,13 @@
 <div class="alert alert-note">
   <div>
     In-class Midterm II
+  </div>
+</div>
+<p><span style="color:orange"><strong>Wednesday, 02/16</strong></span></p>
+<h3 id="before-class">Before Class</h3>
+<div class="alert alert-note">
+  <div>
+    Please continue reading <a href="https://rafalab.github.io/dsbook/web-scraping.html">Irizarry Chapter 24</a> on web scraping. Go over the slides from last Friday and practice using CSS Selector Gadget.
   </div>
 </div>
 
