--- a/public/courses/stat220/week7/index.html
+++ b/public/courses/stat220/week7/index.html
@@ -851,8 +851,15 @@ Before Class  Please continue reading Irizarry Chapter 24 on web scraping. Go ov
 </ul>
 <p>Day 16 Slides (<a href="/pdf/Day16/Day16.pdf" target="_blank">pdf</a>/<a href="/pdf/Day16/Day16.html" target="_blank">html</a>)</p>
 <ul>
-<li>Link to <a href="https://github.com/stat220/14-web-scraping" target="_blank" rel="noopener">In Class Activity</a></li>
+<li>Link to <a href="https://github.com/stat220/14-more-web-scraping" target="_blank" rel="noopener">In Class Activity</a></li>
 </ul>
+<p><span style="color:orange"><strong>Friday, 02/18</strong></span></p>
+<h3 id="before-class-1">Before Class</h3>
+<div class="alert alert-note">
+  <div>
+    Read through <a href="https://mastering-shiny.org/basic-app.html">basic intro to Shiny app</a> and watch <a href="https://carleton.hosted.panopto.com/Panopto/Pages/Viewer.aspx?pid=0361538c-7dee-42e1-aeb8-add3002157a8">Shiny tutorial videos by Garrett Grolemund (approx. 47 min)</a>
+  </div>
+</div>
 
           </div>
 
