--- a/public/courses/stat220/week7/index.html
+++ b/public/courses/stat220/week7/index.html
@@ -857,9 +857,11 @@ Before Class  Please continue reading Irizarry Chapter 24 on web scraping. Go ov
 <h3 id="before-class-1">Before Class</h3>
 <div class="alert alert-note">
   <div>
-    Read through <a href="https://mastering-shiny.org/basic-app.html">basic intro to Shiny app</a> and watch <a href="https://carleton.hosted.panopto.com/Panopto/Pages/Viewer.aspx?pid=0361538c-7dee-42e1-aeb8-add3002157a8">Shiny tutorial videos by Garrett Grolemund (approx. 47 min)</a>
+    Read through <a href="https://mastering-shiny.org/basic-app.html">basic intro to Shiny app</a> and watch through a simple <a href="https://youtu.be/Fg-Ha44i1IM">video</a> on building a Shiny App below
   </div>
 </div>
+<p>It would be great if you could go through all of the video, but please go through until the 15 min mark. Here&rsquo;s the video:</p>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/Fg-Ha44i1IM?start=36" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
           </div>
 
