--- a/public/courses/stat220/cheatsheets/index.html
+++ b/public/courses/stat220/cheatsheets/index.html
@@ -65,7 +65,9 @@ ggplot2 Cheatsheet
 dplyr Cheatsheet
 lubridate Cheatsheet
 stringr Cheatsheet
-shiny Cheatsheet" />
+regex Cheatsheet
+shiny Cheatsheet
+caret Cheatsheet" />
 
   
   <link rel="alternate" hreflang="en-us" href="https://deepbas.netlify.app/courses/stat220/cheatsheets/" />
@@ -311,7 +313,9 @@ ggplot2 Cheatsheet
 dplyr Cheatsheet
 lubridate Cheatsheet
 stringr Cheatsheet
-shiny Cheatsheet" /><meta property="og:image" content="https://deepbas.netlify.app/media/icon_hua2ec155b4296a9c9791d015323e16eb5_11927_512x512_fill_lanczos_center_3.png" />
+regex Cheatsheet
+shiny Cheatsheet
+caret Cheatsheet" /><meta property="og:image" content="https://deepbas.netlify.app/media/icon_hua2ec155b4296a9c9791d015323e16eb5_11927_512x512_fill_lanczos_center_3.png" />
     <meta property="twitter:image" content="https://deepbas.netlify.app/media/icon_hua2ec155b4296a9c9791d015323e16eb5_11927_512x512_fill_lanczos_center_3.png" /><meta property="og:locale" content="en-us" />
   
     
@@ -842,7 +846,9 @@ shiny Cheatsheet" /><meta property="og:image" content="https://deepbas.netlify.a
 <p><a href="/cheatsheets/data-transformation.pdf" target="_blank"><code>dplyr</code> Cheatsheet</a></p>
 <p><a href="/cheatsheets/lubridate.pdf" target="_blank"><code>lubridate</code> Cheatsheet</a></p>
 <p><a href="/cheatsheets/strings.pdf" target="_blank"><code>stringr</code> Cheatsheet</a></p>
+<p><a href="/cheatsheets/regex.pdf" target="_blank"><code>regex</code> Cheatsheet</a></p>
 <p><a href="/cheatsheets/shiny.pdf" target="_blank"><code>shiny</code> Cheatsheet</a></p>
+<p><a href="/cheatsheets/caret.pdf" target="_blank"><code>caret</code> Cheatsheet</a></p>
 
           </div>
 
