--- a/public/courses/stat220/week7/index.html
+++ b/public/courses/stat220/week7/index.html
@@ -863,7 +863,7 @@ Before Class  Please continue reading Irizarry Chapter 24 on web scraping. Go ov
 <p>It would be great if you could go through all of the video, but please go through until the 15 min mark. Here&rsquo;s the video:</p>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/Fg-Ha44i1IM?start=36" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 <h3 id="in-class-1">In Class</h3>
-<p>Today&rsquo;s class will be more of like a lab session, where we will see someimplementations of basic Shiny App and practice some more towards the end. Please come prepared!!</p>
+<p>Today&rsquo;s class will be more like a lab session, where we will see some basic Shiny App implementations. We will practice some more towards the end, so please come prepared to do some hands-on activities!!</p>
 <ul>
 <li>Link to <a href="https://github.com/stat220/Day17-In-Class-Activity-Shiny" target="_blank" rel="noopener">Shiny Tutorial</a></li>
 </ul>
