--- a/public/courses/stat220/week1/index.html
+++ b/public/courses/stat220/week1/index.html
@@ -706,6 +706,10 @@ Before next class Students are expected to open a GitHub account, verify it, and
       
 
 
+  <li class=""><a href="/courses/stat220/week8/">Week 8</a></li>
+
+
+
   <li class=""><a href="/courses/stat220/week7/">Week 7</a></li>
 
 
