--- a/public/courses/stat220/cheatsheets/index.html
+++ b/public/courses/stat220/cheatsheets/index.html
@@ -716,6 +716,10 @@ caret Cheatsheet" /><meta property="og:image" content="https://deepbas.netlify.a
       
 
 
+  <li class=""><a href="/courses/stat220/week8/">Week 8</a></li>
+
+
+
   <li class=""><a href="/courses/stat220/week7/">Week 7</a></li>
 
 
