--- a/public/courses/stat220/homework-in-stat-220/index.html
+++ b/public/courses/stat220/homework-in-stat-220/index.html
@@ -705,6 +705,10 @@
       
 
 
+  <li class=""><a href="/courses/stat220/week8/">Week 8</a></li>
+
+
+
   <li class=""><a href="/courses/stat220/week7/">Week 7</a></li>
 
 
