--- a/public/courses/stat220/week4/index.html
+++ b/public/courses/stat220/week4/index.html
@@ -704,6 +704,10 @@ Before Class  Please read GW Chapter 12 on tidy data and reshaping data. Start w
       
 
 
+  <li class=""><a href="/courses/stat220/week8/">Week 8</a></li>
+
+
+
   <li class=""><a href="/courses/stat220/week7/">Week 7</a></li>
 
 
