--- a/public/courses/stat220/week8/index.html
+++ b/public/courses/stat220/week8/index.html
@@ -61,7 +61,7 @@
     
   
   <meta name="description" content="Monday, 02/21
-Before Class  Please go over the solution of the tutorial from last Friday and practice further using the resources provided there. Read through Mastering Shiny Chapter 2-4. Please watch through a video](https://youtu." />
+Before Class  Please go over the solution of the tutorial from last Friday and practice further using the resources provided there. Read through Mastering Shiny Chapter 2-4. Please watch through a video on a simple demonstration of building a Shiny app below if you are still disoriented about how Shiny actually works." />
 
   
   <link rel="alternate" hreflang="en-us" href="https://deepbas.netlify.app/courses/stat220/week8/" />
@@ -303,7 +303,7 @@ Before Class  Please go over the solution of the tutorial from last Friday and p
   <meta property="og:url" content="https://deepbas.netlify.app/courses/stat220/week8/" />
   <meta property="og:title" content="Week 8 | Deepak Bastola" />
   <meta property="og:description" content="Monday, 02/21
-Before Class  Please go over the solution of the tutorial from last Friday and practice further using the resources provided there. Read through Mastering Shiny Chapter 2-4. Please watch through a video](https://youtu." /><meta property="og:image" content="https://deepbas.netlify.app/media/icon_hua2ec155b4296a9c9791d015323e16eb5_11927_512x512_fill_lanczos_center_3.png" />
+Before Class  Please go over the solution of the tutorial from last Friday and practice further using the resources provided there. Read through Mastering Shiny Chapter 2-4. Please watch through a video on a simple demonstration of building a Shiny app below if you are still disoriented about how Shiny actually works." /><meta property="og:image" content="https://deepbas.netlify.app/media/icon_hua2ec155b4296a9c9791d015323e16eb5_11927_512x512_fill_lanczos_center_3.png" />
     <meta property="twitter:image" content="https://deepbas.netlify.app/media/icon_hua2ec155b4296a9c9791d015323e16eb5_11927_512x512_fill_lanczos_center_3.png" /><meta property="og:locale" content="en-us" />
   
     
@@ -837,7 +837,7 @@ Before Class  Please go over the solution of the tutorial from last Friday and p
 <h3 id="before-class">Before Class</h3>
 <div class="alert alert-note">
   <div>
-    Please go over the solution of the tutorial from last Friday and practice further using the resources provided there. Read through <a href="https://mastering-shiny.org/basic-intro.html">Mastering Shiny Chapter 2-4</a>. Please watch through a video](<a href="https://youtu.be/Fg-Ha44i1IM">https://youtu.be/Fg-Ha44i1IM</a>) on a simple demonstration of building a Shiny App below if you are still disoriented about how Shiny actually works.
+    Please go over the solution of the tutorial from last Friday and practice further using the resources provided there. Read through <a href="https://mastering-shiny.org/basic-intro.html">Mastering Shiny Chapter 2-4</a>. Please watch through a <a href="https://youtu.be/ak_NJCVrJXY">video</a> on a simple demonstration of building a Shiny app below if you are still disoriented about how Shiny actually works.
   </div>
 </div>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/ak_NJCVrJXY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
