--- a/public/courses/stat220/week8/index.html
+++ b/public/courses/stat220/week8/index.html
@@ -845,7 +845,7 @@ Before Class  Please go over the solution of the tutorial from last Friday and p
 <p>We will again do some more hands-on activity to build Shiny apps. We will also see how to integrate interactive maps like <code>leaflet</code> in Shiny.</p>
 <p>Day 18 Slides (<a href="/pdf/Day16/Day18.pdf" target="_blank">pdf</a>/<a href="/pdf/Day18/Day18.html" target="_blank">html</a>)</p>
 <ul>
-<li>Link to <a href="https://github.com/stat220/17-interactive-shiny-examples" target="_blank" rel="noopener">In Class Tutotial</a></li>
+<li>Link to <a href="https://github.com/stat220/17-interactive-shiny-examples" target="_blank" rel="noopener">In Class Tutorial</a></li>
 </ul>
 
           </div>
