--- a/public/courses/stat220/cheatsheets/index.html
+++ b/public/courses/stat220/cheatsheets/index.html
@@ -67,7 +67,8 @@ lubridate Cheatsheet
 stringr Cheatsheet
 regex Cheatsheet
 shiny Cheatsheet
-caret Cheatsheet" />
+caret Cheatsheet
+leaflet Cheatsheet" />
 
   
   <link rel="alternate" hreflang="en-us" href="https://deepbas.netlify.app/courses/stat220/cheatsheets/" />
@@ -315,7 +316,8 @@ lubridate Cheatsheet
 stringr Cheatsheet
 regex Cheatsheet
 shiny Cheatsheet
-caret Cheatsheet" /><meta property="og:image" content="https://deepbas.netlify.app/media/icon_hua2ec155b4296a9c9791d015323e16eb5_11927_512x512_fill_lanczos_center_3.png" />
+caret Cheatsheet
+leaflet Cheatsheet" /><meta property="og:image" content="https://deepbas.netlify.app/media/icon_hua2ec155b4296a9c9791d015323e16eb5_11927_512x512_fill_lanczos_center_3.png" />
     <meta property="twitter:image" content="https://deepbas.netlify.app/media/icon_hua2ec155b4296a9c9791d015323e16eb5_11927_512x512_fill_lanczos_center_3.png" /><meta property="og:locale" content="en-us" />
   
     
@@ -853,6 +855,7 @@ caret Cheatsheet" /><meta property="og:image" content="https://deepbas.netlify.a
 <p><a href="/cheatsheets/regex.pdf" target="_blank"><code>regex</code> Cheatsheet</a></p>
 <p><a href="/cheatsheets/shiny.pdf" target="_blank"><code>shiny</code> Cheatsheet</a></p>
 <p><a href="/cheatsheets/caret.pdf" target="_blank"><code>caret</code> Cheatsheet</a></p>
+<p><a href="/cheatsheets/leaflet.pdf" target="_blank"><code>leaflet</code> Cheatsheet</a></p>
 
           </div>
 
