--- a/public/courses/stat220/week8/index.html
+++ b/public/courses/stat220/week8/index.html
@@ -847,6 +847,14 @@ Before Class  Please go over the solution of the tutorial from last Friday and p
 <ul>
 <li>Link to <a href="https://github.com/stat220/17-interactive-shiny-examples" target="_blank" rel="noopener">In Class Tutorial</a></li>
 </ul>
+<p><span style="color:orange"><strong>Wednesday, 02/23</strong></span></p>
+<h3 id="before-class-1">Before Class</h3>
+<div class="alert alert-note">
+  <div>
+    Continue reading <a href="https://mastering-shiny.org/basic-intro.html">Mastering Shiny Chapter 2-4</a>, especially focusing on reactivity.
+  </div>
+</div>
+<p>We will go over some more Shiny app examples and will also integrate text analysis with Shiny using Twitter sentiment analysis. If you don&rsquo;t have a twitter account yet, please open a twitter account before class and have it verified.</p>
 
           </div>
 
