--- a/public/courses/stat220/week8/index.html
+++ b/public/courses/stat220/week8/index.html
@@ -861,6 +861,13 @@ Before Class  Please go over the solution of the tutorial from last Friday and p
 <ul>
 <li>Link to <a href="https://github.com/stat220/18-twitter-sentiments-shiny" target="_blank" rel="noopener">In Class Tutorial</a></li>
 </ul>
+<p><span style="color:orange"><strong>Friday, 02/25</strong></span></p>
+<h3 id="before-class-2">Before Class</h3>
+<div class="alert alert-note">
+  <div>
+    Skim <a href="https://datasciencebook.ca/classification.html#exploring-a-data-set">sections 5.1-5.4 of Data Science: A First Introduction</a>
+  </div>
+</div>
 
           </div>
 
