--- a/public/courses/stat220/week8/index.html
+++ b/public/courses/stat220/week8/index.html
@@ -865,7 +865,7 @@ Before Class  Please go over the solution of the tutorial from last Friday and p
 <h3 id="before-class-2">Before Class</h3>
 <div class="alert alert-note">
   <div>
-    Skim <a href="https://datasciencebook.ca/classification.html#exploring-a-data-set">sections 5.1-5.4 of Data Science: A First Introduction</a>
+    Skim <a href="https://datasciencebook.ca/classification.html#k-nearest-neighbors-with-tidymodels">sections 5.1-5.6 of Data Science: A First Introduction</a>
   </div>
 </div>
 
