--- a/public/courses/stat220/week8/index.html
+++ b/public/courses/stat220/week8/index.html
@@ -868,6 +868,12 @@ Before Class  Please go over the solution of the tutorial from last Friday and p
     Skim <a href="https://datasciencebook.ca/classification.html#k-nearest-neighbors-with-tidymodels">sections 5.1-5.6 of Data Science: A First Introduction</a>
   </div>
 </div>
+<h3 id="in-class-2">In Class</h3>
+<p>We will start basic classification and learn the basics of k-nearest-neighbors (kNN).</p>
+<p>Day 20 Slides (<a href="/pdf/Day20/Day20.pdf" target="_blank">pdf</a>/<a href="/pdf/Day20/Day20.html" target="_blank">html</a>)</p>
+<ul>
+<li>Link to <a href="https://github.com/stat220/19-classification-knn" target="_blank" rel="noopener">In Class Tutorial</a></li>
+</ul>
 
           </div>
 
