--- a/public/pdf/Day20/Day20.html
+++ b/public/pdf/Day20/Day20.html
@@ -44,7 +44,7 @@ background-size: 160px, 100% 100%
 
 .large[Bastola]
 
- February 25 2022
+ February 26 2022
 
 ---
 
@@ -94,7 +94,6 @@ Just today, Netflix emailed subscribers notifying them of a price increase for m
 --
 
 Will customers cancel their accounts?
-
 
 ---
 
@@ -372,7 +371,7 @@ class: middle
 
 .font110[.fancy[
 
-- We can map out the region in feature-space where the classifier would predict 'fire', and the kinds where it would predict 'not fire'
+- We can map out the region in feature-space where the classifier would predict 'fire' and where it would predict 'not fire'
 
 - There is some boundary between the two, where points on one side of
 the boundary will be classified 'fire' and points on the other side will be
@@ -550,8 +549,6 @@ Owned by the National Institute of Diabetes and Digestive and Kidney Diseases
 
 - A data frame with 768 observations on 9 variables.
 
-- We have the lab results of 158 patients, including whether they have CKD
-
 - Response variable: `diabetes` =	`pos`, `neg`
 
 - Predictor variables: _pregnant, glucose, pressure, triceps, insulin, mass,  pedigree, age_
@@ -600,7 +597,7 @@ c. Which pair of variables in the dataset have the largest correlation?
 d. Using `parsnip` package, perform all the steps involved in classifying whether a patient with certain glucose and insulin would have diabetes or not.
   
 
-<div class="countdown" id="timer_6219183d" style="top:0;right:0;padding:3px 4px;font-size:2em;" data-warnwhen="0">
+<div class="countdown" id="timer_621a4e6e" style="top:0;right:0;padding:3px 4px;font-size:2em;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">10</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
