--- a/public/courses/stat220/week7/index.html
+++ b/public/courses/stat220/week7/index.html
@@ -706,6 +706,10 @@ Before Class  Please continue reading Irizarry Chapter 24 on web scraping. Go ov
       
 
 
+  <li class=""><a href="/courses/stat220/week9/">Week 9</a></li>
+
+
+
   <li class=""><a href="/courses/stat220/week8/">Week 8</a></li>
 
 
