--- a/public/courses/stat220/week2/index.html
+++ b/public/courses/stat220/week2/index.html
@@ -704,6 +704,10 @@ Before Class  Please read GW Chapter 3, GW Chapter 28 and Jenny Bryan&rsquo;s Ch
       
 
 
+  <li class=""><a href="/courses/stat220/week9/">Week 9</a></li>
+
+
+
   <li class=""><a href="/courses/stat220/week8/">Week 8</a></li>
 
 
